feat ok uri updated with fullpath
